tests/whiley/valid/test_1989.wyal
define extract_loopinvariant_25(int[] ls, int i, int[] r) is:
    (|r| == (|ls| + 1)) && (i >= 0)


assert "loop invariant not restored":
    forall(int[] ls, int[] r, int[] r$2, int i, int i$1, int[] r$1, int i$2):
        if:
            i == 0
            r == [1;|ls| + 1]
            extract_loopinvariant_25(ls, i$1, r$1)
            i$1 < |ls|
            r$2 == r$1[i$1:=ls[i$1]]
            i$2 == (i$1 + 1)
        then:
            extract_loopinvariant_25(ls, i$2, r$2)


