tests/whiley/invalid/test_177.wyal
define sumOver_loopinvariant_12(int i, int sum) is:
    (i >= 0) && (sum >= 0)


assert "loop invariant not restored":
    forall(int sum, int[] ls, int sum$2, int sum$1, int i$1, int i, int i$2):
        if:
            i == 0
            sum == 0
            sumOver_loopinvariant_12(i$1, sum$1)
            i$1 < |ls|
            sum$2 == (sum$1 + ls[i$1])
            i$2 == (i$1 + 1)
        then:
            sumOver_loopinvariant_12(i$2, sum$2)


